<resources>
    <string name="app_name">UOSAssistant</string>
    <string name="scan_activity_title">UOSAssistant</string>
    <string name="scan_activity_btn">Scan code to connect devices</string>
    <string name="scan_activity_error">Parameter error</string>
    <string name="scan_activity_tip">Scan Client - Mobile Collaboration QR Code</string>
    <string name="scan_activity_disconnect">connection disconnected</string>
    <string name="cooperation_activity_screen_casting">Screen casting in progress</string>
    <string name="cooperation_activity_disconnect">disconnect</string>
    <string name="cooperation_activity_end_screen">end screen casting</string>
    <string name="cooperation_activity_cooperation">collaborating in progress</string>
    <string name="cooperation_activity_screencast">screen casting</string>
    <string name="reverse_vnc_success">Connection to %1$s:%2$d succeeded</string>
    <string name="reverse_vnc_fail">Connection to %1$s:%2$d failed</string>
    <string name="main_activity_title">droidVNC-NG Admin Panel</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_settings_port">Port</string>
    <string name="main_activity_settings_port_not_listening">Inbound connections disabled</string>
    <string name="main_activity_settings_password">Password</string>
    <string name="main_activity_settings_access_key">Access Key</string>
    <string name="main_activity_settings_start_on_boot">Start on Boot</string>
    <string name="main_activity_settings_start_on_boot_delay">Start Delay (s)</string>
    <string name="main_activity_settings_file_transfer">File Transfer</string>
    <string name="main_activity_settings_scaling">Scaling</string>
    <string name="main_activity_settings_view_only">View Only</string>
    <string name="main_activity_settings_show_pointers">Mouse Cursors</string>
    <string name="main_activity_permissions_dashboard">Permissions Dashboard</string>
    <string name="main_activity_colon">:</string>
    <string name="main_activity_screen_capturing">Screen Capturing</string>
    <string name="main_activity_fallback">fallback</string>
    <string name="main_activity_granted">granted</string>
    <string name="main_activity_denied">denied</string>
    <string name="main_activity_file_access">File Access</string>
    <string name="main_activity_notifications">Notifications</string>
    <string name="main_activity_input">Input</string>
    <string name="main_activity_start_on_boot">Start on Boot</string>
    <string name="main_activity_address">The server is now reachable at</string>
    <string name="main_activity_share_link">share browser access link</string>
    <string name="main_activity_not_listening">The server is not listening for incoming connections.</string>
    <string name="main_activity_outbound_text">You can make outbound connections:</string>
    <string name="main_activity_connecting_to">Connecting to %1$s</string>
    <string name="main_activity_reverse_vnc_button">Connect to a listening viewer</string>
    <string name="main_activity_reverse_vnc_hint">Host:Port</string>
    <string name="main_activity_reverse_vnc_success">Connection to %1$s:%2$d succeeded</string>
    <string name="main_activity_reverse_vnc_fail">Connection to %1$s:%2$d failed</string>
    <string name="main_activity_repeater_vnc_button">Connect to a repeater</string>
    <string name="main_activity_repeater_vnc_hint">Host:Port</string>
    <string name="main_activity_repeater_vnc_hint_id">ID on Repeater</string>
    <string name="main_activity_repeater_vnc_success">Connection to %1$s:%2$d with ID %3$s succeeded</string>
    <string name="main_activity_repeater_vnc_fail">Connection to %1$s:%2$d with ID %3$s failed</string>
    <string name="main_activity_repeater_vnc_input_missing">Host and/or ID missing</string>
    <string name="main_activity_reconnect_tries_hint">Max. reconnect tries</string>
    <string name="main_service_notification_not_listening">Not listening for incoming connections</string>
    <plurals name="main_service_notification_listening">
        <item quantity="one">Listening on port %1$d, %2$d client connected</item>
        <item quantity="other">Listening on port %1$d, %2$d clients connected</item>
    </plurals>
    <string name="input_a11y_service_description">This allows droidVNC-NG to post input events to the Android operating system, thus allowing remote control from a connected VNC viewer. All entered input is directly posted to Android, no input is logged, saved or shared.</string>
    <string name="input_a11y_title">Accessibility disabled</string>
    <string name="input_a11y_msg_input">To be able to remotely control your device, you need to enable accessibility for droidVNC-NG. Do you want to enable accessibility now?</string>
    <string name="input_a11y_msg_boot">To enable start on boot for droidVNC-NG, you need to enable accessibility for it. Do you want to enable accessibility now?</string>
    <string name="input_a11y_msg_input_and_boot">To be able to remotely control your device and to enable start on boot for droidVNC-NG, you need to enable accessibility for it. Do you want to enable accessibility now?</string>
    <string name="input_a11y_act_not_found_msg">Could not find the default accessibility settings activity. Please enable droidVNC-NG in system accessibility settings manually.</string>
    <string name="mediaprojection_request_activity_fallback_screen_capture_title">Slow fallback screen capture mode detected</string>
    <string name="mediaprojection_request_activity_fallback_screen_capture_msg">Do you want to upgrade to fast mode now?</string>
    <string name="write_storage_title">File access disabled</string>
    <string name="write_storage_msg">To be able to transfer files to and from your device, you need to enable file access for droidVNC-NG. Do you want to enable file access now?</string>
    <string name="write_storage_msg_android_11">To be able to transfer files to and from your device, you need to enable file access for droidVNC-NG. Please note that saving files will only be possible in the \'Download\' and \'Documents\' directories. Do you want to enable file access now?</string>
    <string name="notification_title">Notifications disabled</string>
    <string name="notification_msg">To be able to show server status information and provide a means of navigating back to the admin panel more easily, it is recommended to enable notifications. Do you want to enable notifications now?</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="or">or</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="common_unknown_error">未知错误</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <string name="common_crash_hint">应用出了点小意外，正在重新启动</string>
    <string name="common_network_error">当前网络不可用，请检查网络设置</string>
    <string name="common_video_error_not_support">该视频不适合在此设备上播放</string>
    <string name="common_video_error_unknown">无法播放此视频</string>
    <string name="common_video_error_supplement">错误类型：%d，错误代码：%d</string>
    <string name="common_phone_input_hint">请输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>
    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>
    <string name="common_code_input_hint">请输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>
    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>
    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>
    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>
    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>
    <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>
    <string name="common_no_more_data">没有更多数据了</string>
    <string name="common_web_ssl_error_title">当前网站安全证书已过期或不可信\n是否继续浏览</string>
    <string name="common_web_ssl_error_allow">继续浏览</string>
    <string name="common_web_ssl_error_reject">返回上一页</string>
    <string name="common_web_location_permission_title">当前网站需要获取您的地理位置</string>
    <string name="common_web_location_permission_allow">授予</string>
    <string name="common_web_location_permission_reject">拒绝</string>
    <string name="common_web_call_phone_title">当前号码 %s</string>
    <string name="common_web_call_phone_allow">拨打</string>
    <string name="common_web_call_phone_reject">取消</string>
    <string name="http_loading">加载中&#8230;</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="status_layout_no_data">空空如也</string>
    <string name="status_layout_error_request">请求出错，请重试</string>
    <string name="status_layout_error_network">网络错误，请重试</string>
    <string name="status_layout_retry">重试</string>
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>
    <string name="date_title">请选择日期</string>
    <string name="time_title">请选择时间</string>
    <string name="update_title">发现新版本</string>
    <string name="update_content">更新内容</string>
    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>
    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>
    <string name="update_no_update">当前已是最新版本</string>
    <string name="update_notification_channel_id">update</string>
    <string name="update_notification_channel_name">升级通知</string>
    <string name="share_title">分享到&#8230;</string>
</resources>