<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <!-- this is focusable to start with view focus here! -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_settings_port" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:inputType="number"
                    android:id="@+id/settings_port"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_settings_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:inputType="textPassword"
                    android:id="@+id/settings_password"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_settings_access_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:inputType="textPassword"
                    android:id="@+id/settings_access_key"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_settings_start_on_boot_delay" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:inputType="number"
                    android:id="@+id/settings_start_on_boot_delay"/>

            </TableRow>

        </TableLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_permissions_dashboard"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_screen_capturing" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:text="@string/main_activity_fallback"
                    android:textAllCaps="true"
                    android:id="@+id/permission_status_screen_capturing"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_input" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:text="@string/main_activity_fallback"
                    android:textAllCaps="true"
                    android:id="@+id/permission_status_input"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/permission_row_file_access">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_file_access" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:text="@string/main_activity_fallback"
                    android:textAllCaps="true"
                    android:id="@+id/permission_status_file_access"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/permission_row_notification">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_notifications" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:text="@string/main_activity_fallback"
                    android:textAllCaps="true"
                    android:id="@+id/permission_status_notification"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/permission_row_start_on_boot">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_column="0"
                    android:padding="10dp"
                    android:hyphenationFrequency="full"
                    android:text="@string/main_activity_start_on_boot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:text="@string/main_activity_colon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="2"
                    android:padding="10dp"
                    android:text="@string/main_activity_fallback"
                    android:textAllCaps="true"
                    android:id="@+id/permission_status_start_on_boot"/>

            </TableRow>

        </TableLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start"
            style="@style/ButtonStyle"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/test"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="连接"
            style="@style/ButtonStyle"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/projection"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="投屏请求"
            style="@style/ButtonStyle"
            />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

    </LinearLayout>

</ScrollView>

