<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_app"
    tools:context=".ui.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_100"
            android:textSize="16sp"
            android:text="@string/cooperation_activity_cooperation"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_status_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_50"
            android:src="@drawable/icon_device" />


        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:fontWeight="500"
            android:text="UOS-deepin"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_device_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/background_ip"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="IP: 123.45.67.8"
            android:textColor="#41647C"
            android:textSize="12sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            android:id="@+id/btn_cast_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_100"
            android:background="@drawable/background_button_cancel"
            android:gravity="center"
            android:text="@string/cooperation_activity_screencast"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            android:id="@+id/btn_cast_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/background_button_confirm"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#B3000000"
            android:text="@string/cooperation_activity_disconnect" />

        <TextView
            android:id="@+id/tv_device_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="88dp"
            android:textColor="#80000000" />

    </LinearLayout>

</LinearLayout>
