<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:textSize="16sp"
        android:text="@string/cooperation_activity_cooperation"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="136dp"
        android:layout_height="108dp"
        android:layout_marginTop="136dp"
        android:src="@drawable/icon_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/device2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontWeight="500"
        android:text="UOS-deepin"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/device"
        android:layout_width="108dp"
        android:layout_height="24dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/background_ip"
        android:gravity="center"
        android:text="IP: 123.45.67.8"
        android:textColor="#41647C"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/screen_casting"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_button_cancel"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/cooperation_activity_screencast"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/device_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:textColor="#80000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_casting" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_button_confirm"
        android:gravity="center"
        android:textColor="#B3000000"
        android:textSize="14sp"
        android:text="@string/cooperation_activity_disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="343dp"
        tools:layout_editor_absoluteY="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
